--- a/src/styles/stylesCSS/styles.css
+++ b/src/styles/stylesCSS/styles.css
@@ -17,6 +17,69 @@ h2 {
   height: 100%;
   width: 100%;
 }
+/* Splash Page */
+
+.splash-container {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  justify-content: center;
+  width: 100%;
+}
+
+.splash-container h1 {
+  text-align: center;
+  font-size: 2.8em;
+  word-spacing: 0.3em;
+  font-family: fantasy;
+  text-shadow: 0.1em 0.1em 0.1em rgb(0, 0, 0);
+}
+
+.splash-center-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  min-width: 18.75rem;
+  width: 100%;
+  height: 23rem;
+  margin: 1rem;
+  padding-left: 12%;
+  padding-right: 12%;
+}
+
+.splash-img-container {
+  max-width: 10.6rem;
+  min-width: 6.5rem;
+  height: 23rem;
+}
+
+.splash-img-container img {
+  width: 100%;
+  height: 100%;
+}
+
+.overlay {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: 1;
+  background-color: rgba(5, 10, 5, 0.6)
+}
+
+.dialog {
+  position: absolute;
+  z-index: 2;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items:center;
+  height: fit-content;
+  flex-direction: column;
+}
+
+/* Navigation */
 
 .nav {
   align-items: center;
@@ -70,7 +133,7 @@ h2 {
   color: grey;
   font-weight: 600;
   letter-spacing: 4px;
-  text-shadow: .1px .3px white;
+  text-shadow: 0.1px 0.3px white;
   margin: 0 auto;
 }
 
@@ -141,11 +204,12 @@ h2 {
 }
 
 .description {
-  background-color: rgba(5, 10, 5, 0.6);
-  box-shadow: 10px 10px 5px black;
-  color: rgb(255, 255, 255);
+  background-color: rgba(226, 217, 157, 0.795);
+  box-shadow: 10px 10px 10px black;
+  color: rgb(48, 45, 45);
   margin: 0 1.5rem;
   margin-bottom: 2rem;
+  font-weight: 700;
   font-size: 1.1em;
   height: 12rem;
   line-height: 1.2em;
@@ -156,6 +220,5 @@ h2 {
 }
 
 .description::-webkit-scrollbar {
-    display: none;
-  }
-
+  display: none;
+}
